# docuforge

./: DEPLOYMENT_GUIDE.md  IMPLEMENTATION_PLAN.md  LOCAL_DEVELOPMENT_GUIDE.md  README.md  TECHNICAL_SPECIFICATION.md  TESTING_STRATEGY.md  WORKFLOW_EXAMPLES.md  llms-full.txt
docuforge/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docuforge/app/: __init__.py  config.py  main.py
docuforge/app/api/: __init__.py  documents.py  jobs.py  webhooks.py
docuforge/app/core/: __init__.py  auth.py  database.py  storage.py
docuforge/app/functions/: __init__.py  document_processing.py  editing.py  extraction.py  splitting.py
docuforge/app/models/: __init__.py  base.py  document.py  job.py  metrics.py
docuforge/app/schemas/: __init__.py  common.py  requests.py  responses.py
docuforge/app/services/: __init__.py  ai_service.py  ocr_service.py
docuforge/app/utils/: __init__.py  monitoring.py
docuforge/monitoring/: prometheus.yml
docuforge/scripts/: setup.sh
docuforge/tests/: __init__.py  test_api.py
